--- a/style.css
+++ b/style.css
@@ -333,10 +333,15 @@ footer .footer{
        }
 
     main{
-        width: 90% ;
+        width: 99% ;
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .container-externo{
+
+        max-width: 93%;
     }
 
     .texto-menu{
