--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 41%, rgba(29, 122, 221, 0
 
 main{
     margin: auto;
-    width: 90vw;
     
 }
 
@@ -165,8 +164,9 @@ header .menu{
 .container-externo{
     border-radius: 50px;
     background-color: #122A57;
-    width: 100%;
+    width: 97%;
     padding: 20px;
+    margin-left: 6px;
       
 
 }
@@ -333,7 +333,7 @@ footer .footer{
        }
 
     main{
-        width: 99% ;
+
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -341,7 +341,7 @@ footer .footer{
 
     .container-externo{
 
-        max-width: 93%;
+        max-width: 90%;
     }
 
     .texto-menu{
